--- a/abstract.tex
+++ b/abstract.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 %\usepackage{hyperref}
 \usepackage{xcolor}
+\usepackage[flushleft]{threeparttable}
 %\usepackage[superscript,biblabel]{cite}
 
 %\bibliographystyle{naturemag}
@@ -29,23 +30,31 @@ Letters include received/accepted dates and may be accompanied by supplementary 
 
 \section{Introductory para (200 words approx)}
 
-Understanding the contextual factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, we know little about the role alcohol plays in this relationship. Using crime data from the third largest police force in England from the period 2010-2018, we find that alcohol-related domestic abuse incidents increase by 62\% following an England victory in a national football tournament (World Cup, European Championship). This effect is driven by a 76\% increase in male to female alcohol-related incidents (and is absent from male to male, female to male, and female to female domestic abuse incidents), and is not present in other types of criminal behaviours, such as public order offences, other violent, or property-related offences. A three-hour analysis reveals that the increase starts in the three-hour period of the match, the highest in the three hours after the victory, and gradually declines to its baseline level in the 24 hours following the match. Apart from the higher likelihood of alcohol-involvement, we do not find that domestic abuse incidents occurring on England match days are characteristically different from incidents occurring on non-match days.
+Understanding the contextual factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, we know little about the role alcohol plays in this relationship. Using crime data from the third largest police force in England from the period 2010-2018, we find that alcohol-related domestic abuse incidents increase by 62\% following an England victory in a national football tournament (World Cup, European Championship). This effect is driven by a 72\% increase in male to female alcohol-related cases (and is absent from male to male, female to male, and female to female domestic abuse cases), and is not present in other types of criminal behaviours, such as public order offences, other violent, or property-related offences. A three-hour analysis reveals that the increase starts in the three-hour period of the match, the highest in the three hours after the victory, and gradually declines to its baseline level in the 24 hours following the match. Apart from the higher likelihood of alcohol-involvement, we do not find that domestic abuse cases occurring on England match days are characteristically different from cases occurring on non-match days.
 
 
 \section{Long intro}
 
 "If England gets beaten, so will she" - read the poster as part of the "The Not-So-Beautiful-Game" awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup \autocite{NCDV}. While a range of smaller, US studies have investigated the link between sports events and domestic abuse\autocite{Williams2014}, large-scale quantitative investigations of this relationship are relatively scarce. The most extensive study in the topic found that an unexpected loss of the local National Football League (NFL) team resulted in a 10\% increase in the rate of reported male to female intimate partner violence (IPV)\autocite{Card2011}. 
 
-In the UK, investigations of the relationship between sports and domestic abuse mostly focused on football (soccer). Football's history is inextricably linked to England, and is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of viewers \autocite{BBC}. In 2012, a small, exploratory study investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces in England\autocite{Brimicombe2012}. Using a control period from 2009, it found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days then they draw. A more comprehensive investigation, using daily counts of intimate partner violence in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in rates of reported domestic violence when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-so Beautiful Game Campaign.  
+In the UK, investigations of the relationship between sports and domestic abuse mostly focused on football (soccer). Football's history is inextricably linked to England, and is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of viewers \autocite{BBC}. In 2012, a small, exploratory study investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces in England\autocite{Brimicombe2012}. Using a control period from 2009, it found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days then they draw. A more comprehensive investigation, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in rates of reported domestic violence when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-so Beautiful Game Campaign.  
 
 Domestic abuse is unlike other types of crimes, which warrants a careful interpretation of these estimates. First, domestic abuse is a vastly underreported crime (according to the Crime Survey of England and Wales, only 17\% of all domestic abuse victims reported the abuse to the police between April, 2017 and March, 2018\autocite{ONS}). Second, while the umbrella term "domestic abuse" encompasses a wide range of behaviours differing in the partner dynamics involved and the overall context in which the behaviour occurs \autocite{Kelly2008}, it is predominantly understood as a pattern of ongoing behaviour, involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}. These studies nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse. Exploring the characteristics of this relationship is instrumental in understanding the pathways of the effect.
 
 
-Why would sporting events, such as the World Cup precipitate domestic abuse in England?   England's participation in national football tournaments are times of heightened patriotic emotions and a strengthened sense of "Englishness", fuelled by media narratives that often use historical, nostalgic sentiments and a "us vs. them" rhetoric to generate and represent an English national identity\autocite{Vincent2014}. In addition, British football fandom is prevalently male dominated\autocite{Parry2014}. Previous qualitative research has suggested that male violence in televised sports can act as a vehicle for the male sports fan to redefine and express his masculinity in a way that allows dominance, control and can ultimately manifest in intimate partner violence \autocite{Sabo}. Other factors, such as emotional frustration, gambling and substance abuse can also alter the effect.
+Why would sporting events, such as the World Cup precipitate domestic abuse in England?   England's participation in national football tournaments are times of heightened patriotic emotions and a strengthened sense of "Englishness", fuelled by media narratives that often use war references and a "us vs. them" rhetoric to generate and represent an English national identity\autocite{Vincent2014}. In general, British football fandom is characterised by a high level of team identification and is prevalently male dominated\autocite{Parry2014}. Previous research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse, given susceptibility to such behaviours\autocite{Sabo}. We speculate that this observation is especially pertinent in the context of England's participation in national tournaments, owing to the popularity of the sport in the country, the associated media attention, and the particularly high levels of team identification stemming from a strengthened national identity. 
 
-What might be the exact role of alcohol in the relationship between football and domestic abuse? In the US, the effect of unexpected NFL losses on IPV was the same for alcohol and non-alcohol incidents\autocite{Card2011}. While the England-based quantitative studies did not look at the role of alcohol in particular, qualitative investigations suggest a complex relationship between alcohol and domestic abuse. Alcohol has a strong association with domestic abuse, those with alcohol-problems are more likely to be perpetrators, and when alcohol is involved there is evidence that the violence might be more serious \autocite{Peralta2010}. However, it is generally understood that the role of alcohol should be considered in the context of a range of other factors (e.g., social, biological, psychological), and that alcohol is not the direct cause of domestic abuse \autocite{Javaid2015,Peralta2010}. Alternative explanations for the co-occurrence of domestic abuse and alcohol suggest that alcohol is often used as an excuse by the perpetrator\autocite{Javaid2015}, and that drinking and violence can play an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. 
+%Other factors, such as gambling and substance abuse might also contribute to the effect.
 
-Given the strong association between drinking culture and football in England\autocite{Dixon2014} and the continuous reinforcement of this relationship by the marketing practices of the alcohol industry\autocite{Gornall2014}, we hypothesize that alcohol plays a major role in the relationship between national football tournaments and domestic abuse in England. To explore this hypothesis, we investigate whether the number of reported domestic abuse cases recorded by the West Midland Police in England increase on days when the England national team plays in the World Cup or the European Championship, and whether the relationship is modified by alcohol-involvement in the incident. We also consider whether the result of the match alters the relationship, as it had been previously suggested that the effect is heightened when England loses\autocite{Kirby2014}.
+What might be the exact role of alcohol in the relationship between football and domestic abuse? In the US, the relationship between unexpected NFL losses and IPV did not depend on alcohol-involvement in the incident\autocite{Card2011}. While the England-based quantitative studies did not look at the role of alcohol in particular, qualitative investigations suggest a complex relationship between alcohol and domestic abuse. Alcohol has a strong association with domestic abuse, those with alcohol-problems are more likely to be perpetrators, and when alcohol is involved, there is evidence that the violence might result in more serious injuries \autocite{Peralta2010}. However, it is generally understood that the role of alcohol should be considered in the context of a range of other factors (e.g., social, biological, psychological), and that alcohol is not the direct cause of domestic abuse \autocite{Javaid2015,Peralta2010}. One explanation for the co-occurrence of domestic abuse and alcohol suggest that for some men, drinking and violence plays an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. Given the strong association between drinking culture and football in England\autocite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry\autocite{Gornall2014}, we hypothesize that alcohol plays a major role in the relationship between national football tournaments and domestic abuse in England. 
+
+%Alternative explanations for the co-occurrence of domestic abuse and alcohol suggest that alcohol is often used as an excuse by the perpetrator\autocite{Javaid2015}, and that drinking and violence can play an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. 
+
+
+
+
+
+To explore this hypothesis, we investigate whether the number of reported domestic abuse cases recorded by the West Midland Police in England increase on days when the England national team plays in the World Cup or the European Championship, and whether the effect, if any, is affected by alcohol-involvement in the incident. We also consider whether the result of the match alters the relationship, as previous research suggested that the effect is heightened when England loses\autocite{Kirby2014}.
 
 \textcolor{red}{another short para on additional results}
 
@@ -53,23 +62,58 @@ Given the strong association between drinking culture and football in England\au
 
 \subsection{Data description}
 
-Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) recorded by the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.8 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. 
+Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) recorded by the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018\footnote{The first half of 2017 has been excluded due to missing data.}. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related.\textcolor{red}{Sentence about daily rate and how it compares to previous studies}. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. 
 
-In the UK, the term "domestic abuse" refers to a wide range of behaviours, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment either within a family or an intimate relationship\autocite{ONS}. Recent changes to the definition introduced the concept of coercive control, which recognises domestic abuse as a pattern of incidents, which can include any of the above behaviours. Previous research have focused on intimate partner abuse, which the largest subcategory of domestic abuse. Unfortunately, our dataset does not allow us to differentiate intimate partner abuse from family abuse, as we don't know the exact relationship between the victim and offender. 
+%Card & Dahl find a 10% increase in male to female violence
+%in their dataset, daily prevalence of DA is 1.28 per 100,000 population
+%Kirby
+
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{rlrrrrr}
+  \hline
+ & year & population & All\_DA & Alcohol & inc\_rate & alcinc\_rate \\ 
+  \hline
+1 & 2010 & 2711938.00 & 31110.00 & 4415.00 & 3.14 & 0.45 \\ 
+  2 & 2011 & 2739733.00 & 27792.00 & 3814.00 & 2.78 & 0.38 \\ 
+  3 & 2012 & 2761887.00 & 22399.00 & 4059.00 & 2.22 & 0.40 \\ 
+  4 & 2013 & 2781753.00 & 32558.00 & 8183.00 & 3.21 & 0.81 \\ 
+  5 & 2014 & 2805891.00 & 41020.00 & 10697.00 & 4.01 & 1.04 \\ 
+  6 & 2015 & 2834490.00 & 44430.00 & 11551.00 & 4.29 & 1.12 \\ 
+  7 & 2016 & 2870551.00 & 45375.00 & 11513.00 & 4.33 & 1.10 \\ 
+  8 & 2017 & 2897303.00 & 17384.00 & 4308.00 & 1.64 & 0.41 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+In the UK, the term "domestic abuse" refers to a wide range of behaviours, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment either within a family or an intimate relationship\autocite{ONS}. Recent changes to the definition introduced the concept of coercive control, which recognises domestic abuse as a pattern of incidents, which can include any of the above behaviours. Previous research have focused on IPV, which the largest subcategory of domestic abuse. 
+%Unfortunately, our dataset does not allow us to differentiate intimate partner abuse from family abuse, as we do not have information on the exact relationship between the victim and offender. 
 
 \section{Results}
 
-We first explore whether reported domestic abuse increases on days when the England national team loses, wins or draws, and if this relationship is more pronounced for alcohol-related incidents.
+We first explore whether reported alcohol and non-alcohol related domestic abuse cases increase on days when the England national team loses, wins or draws, and if this relationship, if any, varies by the gender of the perpetrator and the victim. If national football matches affect masculinity construction and promote violence, we expect to see an increase in male-perpetrated domestic abuse.
+
+
+In the following regressions, each observation is a day in the period between 2010 and 2018, and the outcome variable is the number of cases happened on that day that got reported before the end of our dataset period (05/11/2018). The first column of Table \ref{gender_regression} shows the result for all reported domestic abuse cases, and the remaining four columns show the result for different offender victim gender categories (e.g., "MF" denotes cases with male perpetrators and female victims). For all cases of domestic abuse, we see a 62\% increase in alcohol-related cases, but not in non-alcohol related cases on days when England won. This increase is exclusively driven by Male to Female cases (which comprises about 80\% of all domestic abuse cases), where the increase is 72\%. 
+
+These results show both differences and similarities with earlier findings. In the US study\autocite{Card2011}, the effect of the match did not depend on alcohol-involvement in the abuse case, whereas our results indicate that alcohol plays an instrumental role in the relationship between football and domestic abuse. This discrepancy highlights that the effect on sports-induced emotional cues on domestic abuse are likely to be highly sensitive to the cultural context. A similarity between our findings is that the increase is only present in male to female abuse cases, lending support to the hypothesis that masculinity construction is key in the link between sports-induced violence and domestic abuse. \textcolor{red}{maybe put it differently? not sure how much I should speculate}
+
+The largest England-based study found that an England loss results in the largest increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%). We find a slightly different pattern (although the difference between the effect of an England win and loss are not significant), in that it is when England wins we find the largest increase in domestic abuse. Upon re-analysing their data by treating wins and draws as two separate variables and adding a month control (see Figure \ref{fig:kirbyrep} in the Appendix), we see an asymmetric effect similar to ours, indicating that wins result in the largest increase (46\%), followed by losses (33\%), and no effect when England draws, potentially due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw. Crucially, our results show that the increase when England wins might exclusively come from an increase in alcohol-related cases, suggesting that alcohol is key in the relationship between football and domestic abuse.
+
 
 \begin{table*}[htb]
-\scalebox{0.7}{
+\scalebox{0.68}{
+  \begin{threeparttable}
+  \caption{} 
+  \label{gender_regression}
 \begin{tabular}{@{\extracolsep{5pt}}lccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & \multicolumn{5}{c}{\textit{Dependent variable:}} \\ 
 \cline{2-6} 
 \\[-1.8ex] &  & \multicolumn{4}{c}{} \\ 
- & All & Male to Male & Male to Female & Female to Female & Female to Male \\ 
+ & All & MM & MF & FF & FM \\ 
 \\[-1.8ex] & (1) & (2) & (3) & (4) & (5)\\ 
 \hline \\[-1.8ex] 
  Tournament on & 1.016 & 0.989 & 1.022 & 1.047 & 0.883$^{*}$ \\ 
@@ -96,48 +140,86 @@ We first explore whether reported domestic abuse increases on days when the Engl
   & (0.885, 1.251) & (0.799, 1.522) & (0.897, 1.259) & (0.375, 1.305) & (0.637, 1.276) \\ 
  \hline \\[-1.8ex] 
 Observations & 6,034 & 6,034 & 6,034 & 6,034 & 6,034 \\ 
-Log Likelihood & $-$22,935.480 & $-$10,790.100 & $-$21,788.040 & $-$9,318.764 & $-$12,729.650 \\ 
-$\theta$ & 17.116$^{***}$  (0.475) & 31.912$^{***}$  (6.562) & 17.098$^{***}$  (0.509) & 34.754$^{***}$  (9.990) & 21.271$^{***}$  (2.122) \\ 
-Akaike Inf. Crit. & 45,948.950 & 21,658.200 & 43,654.080 & 18,715.530 & 25,537.310 \\ 
+%Log Likelihood & $-$22,935.480 & $-$10,790.100 & $-$21,788.040 & $-$9,318.764 & $-$12,729.650 \\ 
+%$\theta$ & 17.116$^{***}$  (0.475) & 31.912$^{***}$  (6.562) & 17.098$^{***}$  (0.509) & 34.754$^{***}$  (9.990) & 21.271$^{***}$  (2.122) \\ 
+%Akaike Inf. Crit. & 45,948.950 & 21,658.200 & 43,654.080 & 18,715.530 & 25,537.310 \\ 
 \hline 
 \hline \\[-1.8ex] 
-\textit{Note:}  & \multicolumn{5}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+%\textit{Note: Negative binomial regressions with year, month, day of week, Christmas, New Year's eve controls}  & \multicolumn{5}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
 \end{tabular} 
-
-} 
-
+\begin{tablenotes}
+      \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
+      \item[b] \textit{Negative binomial regressions with year, month, day of week, Christmas, New Year's eve controls}
+    \end{tablenotes}
+\end{threeparttable} }
 \end{table*}
 
+Our dataset allows us to explore whether similar patterns exist in other types of criminal behaviours. Specifically, we investigate whether the effects of an England match day are similar for public order offences, property-related crimes (including burglary, theft and robbery), or other violent crimes (excluding cases of domestic abuse). We find that in the period of the tournament, there is a slight increase in all types of crime expect domestic abuse.
 
-Previous research have suggested that the effect is more pronounced within the subgroup of male to female incidents, thus we investigate the effect by gender group. 
 
+There are a few effects:
+tournament on - POO, property-related \& other violence
+after england - POO \& Other violence
+England win - noalc POO
+BUT it is clear that the largest effect is on DA and it is hence unique, remarkably other violence does not increase, indicating that an England win and increased alcohol consumption makes people more likely to hurt their partners of family members, but not strangers.
+
+
+\begin{table}[!htbp] \centering 
+ \scalebox{0.75}{
+  \begin{threeparttable}
+  \caption{} 
+  \label{othertype_regression}
+\begin{tabular}{@{\extracolsep{5pt}}lcccc} 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{4}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-5} 
+%\\[-1.8ex] & DA\_incidents & Public\_order\_offences & Property\_related & Violence\_Against\_The\_Person \\ 
+ & Domestic Abuse & Public Order Offences & Property-related & Other violence \\ 
+\\[-1.8ex] & (1) & (2) & (3) & (4)\\ 
+\hline \\[-1.8ex] 
+ Tournament on & 1.020 & 1.099$^{**}$ & 1.050$^{*}$ & 1.074$^{*}$ \\ 
+  & (0.959, 1.086) & (1.023, 1.175) & (0.994, 1.105) & (0.991, 1.158) \\ 
+  England win & 0.977 & 1.295$^{**}$ & 1.069 & 1.211 \\ 
+  & (0.811, 1.186) & (1.092, 1.498) & (0.908, 1.230) & (0.960, 1.463) \\ 
+  England draw & 1.046 & 0.927 & 1.115 & 1.064 \\ 
+  & (0.844, 1.309) & (0.655, 1.199) & (0.931, 1.299) & (0.770, 1.358) \\ 
+  England lost & 0.990 & 1.071 & 0.940 & 1.077 \\ 
+  & (0.824, 1.198) & (0.855, 1.287) & (0.772, 1.108) & (0.825, 1.328) \\ 
+  After England & 1.085 & 1.172$^{**}$ & 1.048 & 1.194$^{**}$ \\ 
+  & (0.968, 1.220) & (1.040, 1.304) & (0.946, 1.149) & (1.039, 1.349) \\ 
+ % Alcohol & 0.270$^{***}$ & 0.115$^{***}$ & 0.051$^{***}$ & 0.203$^{***}$ \\ 
+ % & (0.265, 0.274) & (0.082, 0.147) & (0.026, 0.077) & (0.182, 0.224) \\ 
+  Tournament on:Alcohol & 0.929 & 0.852$^{*}$ & 1.046 & 0.909 \\ 
+  & (0.849, 1.017) & (0.666, 1.038) & (0.906, 1.186) & (0.786, 1.032) \\ 
+  England win:Alcohol & 1.611$^{***}$ & 0.801 & 1.160 & 1.142 \\ 
+  & (1.217, 2.131) & (0.277, 1.326) & (0.726, 1.593) & (0.762, 1.522) \\ 
+  England draw:Alcohol & 0.942 & 1.340 & 0.945 & 1.201 \\ 
+  & (0.672, 1.320) & (0.712, 1.967) & (0.427, 1.462) & (0.753, 1.649) \\ 
+  England lost:Alcohol & 1.203 & 1.492$^{*}$ & 1.339 & 0.990 \\ 
+  & (0.908, 1.593) & (1.031, 1.953) & (0.887, 1.790) & (0.603, 1.377) \\ 
+  After England:Alcohol & 1.045 & 1.040 & 1.090 & 0.868 \\ 
+  & (0.879, 1.241) & (0.729, 1.351) & (0.816, 1.365) & (0.631, 1.105) \\ 
+ \hline \\[-1.8ex] 
+Observations & 6,034 & 6,034 & 6,034 & 6,034 \\ 
+%Log Likelihood & $-$23,487.520 & $-$13,718.040 & $-$17,804.140 & $-$22,298.810 \\ 
+%$\theta$ & 16.599$^{***}$  (0.447) & 25.212$^{***}$  (1.912) & 29.528$^{***}$  (1.303) & 8.700$^{***}$  (0.228) \\ 
+%Akaike Inf. Crit. & 47,053.040 & 27,514.090 & 35,686.280 & 44,675.630 \\ 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\begin{tablenotes}
+      \item[a] \textit{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01}
+      \item[b] \textit{Negative binomial regressions with year, month, day of week, Christmas, New Year's eve controls}
+    \end{tablenotes}
+\end{threeparttable} }
+\end{table}
 
 
 
 \newpage
 
-\subsection{Where does the increase come from? Male to female, age diff less than 15}
-
-\begin{figure}[htb!]
-\centering
-\includegraphics[width=1\textwidth]{DA_gender_compare.pdf}
-\label{fig:DA_compare}
-\end{figure}
-
-\newpage
-
-\subsection{How does the effect on DA compare to other types of crimes?}
-
-
-\begin{figure}[htb!]
-\centering
-\includegraphics[width=1\textwidth]{DA_compare.pdf}
-\label{fig:DA_compare}
-\end{figure}
-
-\newpage
-
-\subsection{What can we say about the temporal dynamics of the effect?}
 \begin{figure}[htb!]
 \centering
 \includegraphics[width=1\textwidth]{Threehours.pdf}
@@ -146,19 +228,11 @@ Previous research have suggested that the effect is more pronounced within the s
 
 \newpage
 
-\subsection{What can we say about repeat incidents that are "triggered" on match days?}
 
 
 
 
-\subsection{Reconciling with previous evidence}
-
-So how can our results be reconciled with those reported previously? Card \& Lee have found an increase in domestic abuse when there is an unexpected loss, but not when the team wins (double check with Neil). An even more striking difference between our results is that they did not find any differential effect on alcohol-related incidents, whereas in our data, the effect is clearly only present in alcohol-related domestic abuse incidents. This discrepancy highlights that the effect on sports-induced emotional cues on domestic abuse are highly sensitive to the cultural context.
-
-As expected, our findings are somewhat easier to reconcile with the results of other, England-based studies. Biricombe and Cafe found an approximately equal increase in domestic abuse when England lost or won, and no increase when they draw. In line with this, our results suggest that there is no increase when England draws - possibly due to the fact that only group-stage, relatively unimportant matches can result in a draw - but we also found an asymmetric effect of losses and wins. Kirby also reported an asymmetric effect, with a 38\% [15 - 66] and 26\% [13 - 40] increase when England lost or win or draw, respectively. However, upon re-analysing their data with separate coefficients for win and draw, and adding a month control, the effects change slightly, indicating a 46\% [29 - 65] increase when England wins, and a 33\% [10 - 59] increase when they lose, respectively, and no effect when they draw. This is more in line with our results, which suggest that while both losses and wins increase rates of domestic abuse, wins have a slightly more pronounced effect. Our results suggests that this asymmetric effect might be down to a large increase in alcohol-related incidents caused by an England victory.
-
-
-But what kind of abuse? useful framework is the typology by Johnson (2008). Can we differentiate SCV and intimate terrorism by the time of reporting? We'd expect loads of CSV in our dataset and not much intimate terrorism (Johnson argues we should use ex partners dataset to investigate this due to the reporting bias in different types of domestic abuse). Intimate terrorism is characterised by harassment and stalking after separation. The big difference between SCV and IT is CONTROL. 
+But what kind of abuse? useful framework is the typology by Johnson (2008). Can we differentiate SCV and intimate terrorism by the time of reporting? We'd expect loads of CSV in our dataset and not much intimate terrorism (Johnson argues we should use ex partners dataset to investigate this due to the reporting bias in different types of domestic abuse). Intimate terrorism is characterised by harassment and stalking after separation. The big difference between SCV and IT is control. 
 
 
 %\href{https://tavistockrelationships.ac.uk/policy-research/policy-briefings/914-couples-with-situational-violence}{Very useful classification}.
@@ -209,7 +283,12 @@ miscell:
 10) Considering repeat incidents reoccurring on E win days, they are not more/less likely to have a long/short time elapsed since last/til next
 
 
-%\bibliographystyle{naturemag}
+\begin{figure}[htb!]
+\centering
+\caption{Replication of Kirby et al. (2014)}
+\includegraphics[width=1\textwidth]{kirbyrep.pdf}
+\label{fig:kirbyrep}
+\end{figure}
 
 \newpage
 
