Neil's crappy abstract too

--- a/abstract.tex
+++ b/abstract.tex
@@ -14,6 +14,9 @@
 %\usepackage[backend=biber,style=numeric,sorting=none]{biblatex}
 %\usepackage[backend=biber]{biblatex}
 
+\definecolor{green}{rgb}{0,1,0}
+\newcommand{\NS}[1] {{\textcolor{green}{#1}}}
+
 %I will need to fix the references
 \addbibresource{football_refs.bib}
 \begin{document}
@@ -29,6 +32,8 @@ Letters include received/accepted dates and may be accompanied by supplementary 
 
 
 \maketitle
+
+\NS{Neil crappy abstract: When England wins or loses a football match, we use WMP data to show that there is a 60\% spike in domestic abuse cases.  We only see the patterns for wins and losses not draws, and only see the increase for domestic abuse cases involving alcohol. Indeed the spike is unique to male on female intimate partner domestic abuse, and we don't see it for other types of incident (e.g., antisocial behaviour).}
 
 \section{Introductory para (200 words approx)}
 
