--- a/abstract.tex
+++ b/abstract.tex
@@ -34,7 +34,7 @@ Letters include received/accepted dates and may be accompanied by supplementary 
 
 \section{Introductory para (200 words approx)}
 
-Understanding the factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, previous quantitative research has not explored the role of alcohol in this relationship. Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we find that the number of reported alcohol-related domestic abuse cases increases by 62\% following an England victory in a national football tournament (World Cup, European Championship). This effect is driven by a 72\% increase in male to female alcohol-related cases, is absent from male to male, female to male, and female to female domestic abuse cases, and is not present in other types of criminal behaviours, such as public order offences, other violent, or property-related offences, \NS{or hate crimes}. A three-hour analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours after the victory, and gradually declines to its baseline level in the 24 hours following the match. The abuse that occurs is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. \NS{Whatever the football does, it only does it to men, only when they are drunk, and only affects their behaviour towards the females they know.}
+Understanding the factors that contribute to the occurrence of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested that national football (soccer) tournaments increase the number of reported domestic abuse cases in England\autocite{Kirby2014, Brimicombe2012}. While hypothesized to be a significant factor, previous quantitative research has not explored the role of alcohol in this relationship. Using crime data from the third largest police force in England, serving a population of 2.9 million\autocite{populationfigure}, we find that the number of reported alcohol-related domestic abuse cases increases by 62\% following an England victory in a national football tournament (World Cup, European Championship). This effect is driven by a 72\% increase in male to female alcohol-related cases, is absent from male to male, female to male, and female to female domestic abuse cases. The effect is specific to domestic violence, and is not present in other types of criminal behaviours, such as public order offences, other violent, or property-related offences, \NS{or hate crimes}. A timeline analysis reveals that the increase starts in the three-hour period of the match, peaks in the three hours after the victory, and gradually declines to its baseline level in the 24 hours following the match. The abuse that occurs is not characteristically different from domestic abuse cases occurring on non-match days, apart from the stronger association with alcohol. \NS{Whatever the football does, it only does it to men, only when they are drunk, and only affects their behaviour towards the females they know.}
 
 
 \section{Long intro}
